--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
         						</p>
         						<a href="#" class="button"> Подробнее</a>
         						<table class="table-slider">
+                                    <tr>
+        								<td>8,5 м</td>
+        								<td>5 кг</td>
+        								<td>Карбон</td>
+        							</tr>
         							<tr>
         								<th>Длина палки</th>
         								<th>Вес палки</th>
         								<th>Материал</th>
         							</tr>
-        							<tr>
-        								<td>8,5 м</td>
-        								<td>5 кг</td>
-        								<td>Карбон</td>
-        							</tr>
         						</table>
                             </div>
                         </div>
     				</li>
-    				<li class="slider-item slider-smartWatch  ">
+    				<li class="slider-item slider-smartWatch">
                         <div class="offers">
                             <img src="img/slider-2.png" alt="Фитнес-браслет" width="345" height="485">
                             <div class="slider-container">
@@ -112,16 +112,16 @@
         						<a href="#" class="button"> Подробнее</a>
         						<table class="table-slider">
         							<tr>
-        								<th>Без подзарядки</th>
+                                        <td>48 часов</td>
         							</tr>
         							<tr>
-        								<td>48 часов</td>
+        								<th>Без подзарядки</th>
         							</tr>
         						</table>
                             </div>
                         </div>
     				</li>
-    				<li class="slider-item slider-drons ">
+    				<li class="slider-item slider-drons">
                         <div class="offers">
                             <img src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
                             <div class="slider-container">
@@ -132,12 +132,12 @@
         						<a href="#" class="button"> Подробнее</a>
         						<table class="table-slider">
         							<tr>
-        								<th>Дальность полета</th>
-        								<th>Радиус поражения</th>
+                                        <td>800 м</td>
+        								<td>50 м</td>
         							</tr>
         							<tr>
-        								<td>800 м</td>
-        								<td>50 м</td>
+        								<th>Дальность полета</th>
+        								<th>Радиус поражения</th>
         							</tr>
         						</table>
                             </div>
@@ -188,23 +188,30 @@
             <div class="service-container">
     			<section class="service container">
     				<ul class="service-slider">
-    					<li class="button button-service service-active">Доставка</li>
-    					<li class="button button-service">Гарантия</li>
-    					<li class="button button-service">Кредит</li>
+    					<li class="button-service service-active">
+                            <a href="#" class="button">Доставка</a>
+                        </li>
+    					<li class="button-service">
+                            <a href="#" class="button">Гарантия</a>
+                        </li>
+    					<li class="button-service">
+                            <a href="#" class="button">Кредит</a>
+                        </li>
     				</ul>
-    				<div class="service-item block-show">
+    				<div class="service-item service-dilivety block-show">
     					<h3>Доставка</h3>
     					<p>
     						Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
     					</p>
     				</div>
-    				<div class="service-item">
+    				<div class="service-item service-warranty">
     					<h3>Гарантия</h3>
     					<p>
-    						Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.
+    						Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br>
+                            Товар, не дом, конечно же.
     					</p>
     				</div>
-    				<div class="service-item">
+    				<div class="service-item service-credit ">
     					<h3>Кредит</h3>
     					<p>
     						Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.
@@ -249,7 +256,7 @@
                     </ul>
                     <a href="#" class="button">Подробнее о нас</a>
                 </section>
-                <section>
+                <section class="info-contacts">
                     <h3>Контакты</h3>
                     <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
                     <a href="#">
@@ -270,10 +277,10 @@
                             <a href="#">Войти</a>
                         </div>
                         <div>
-                            <a href="#">Сравнить</a>
+                            <a href="#" class="compare-footer">Сравнить</a>
                         </div>
                         <div>
-                            <a href="#">Корзина</a>
+                            <a href="#" class="basket-footer">Корзина</a>
                         </div>
                     </div>
                 </div>
@@ -294,17 +301,17 @@
                 </div>
                 <div class="social">
                     <ul class="social-list">
-                        <li>
+                        <li class="social-facebook">
                             <a href="#">
                                 <span class="visually-hidden">facebook</span>
                             </a>
                         </li>
-                        <li>
+                        <li class="social-instagram">
                             <a href="#">
                                 <span class="visually-hidden">instagram</span>
                             </a>
                         </li>
-                        <li>
+                        <li class="social-twitter">
                             <a href="#">
                                 <span class="visually-hidden">vk</span>
                             </a>
@@ -335,7 +342,7 @@
             </form>
         </div>
         <div class="popup popup-map">
-            <img src="#" alt="г. Москва, ул. Строителей, 15">
+            <img src="img/map-big.jpg" alt="г. Москва, ул. Строителей, 15">
             <button type="button" class="button-close">
                 <span class="visually-hidden">Закрыть</span>
             </button>
