--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
                 <div class="authorization-container">
                     <div class="authorization authorization-header">
                         <a href="#" class="user-name">Валентин Петухов</a>
-                        <a href="#">Выйти</a>
+                        <a href="#" class="user-authorization">Выйти</a>
                     </div>
                     <div class="compare">
                         <a href="#">Сравнить</a>
@@ -63,33 +63,10 @@
                 <li><a href="#">Каталог товаров</a></li>
                 <li><a>Моноподы для селфи</a></li>
             </ul>
-            <div class="catalog-sorting-h3">
-                <div class="h3"><h3>Фильтр:</h3></div>
-                <section class="catalog-sorting">
-                    <h3>Сортировка:</h3>
-                    <ul class="sorting-list">
-                        <li><a href="#">По цене</a></li>
-                        <li><a href="#">По типу</a></li>
-                        <li><a href="#">По популярности</a></li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <span class="visually-hidden">От большего к меньшему</span>
-                            </a>
-                        <li>
-                        <li>
-                            <a href="#">
-                                <span class="visually-hidden">От меньшего к большему</span>
-                            </a>
-                        </li>
-                    </ul>
-                </section>
-            </div>
             <div class="catalog-container ">
                 <div class="filter-background">
                     <section class="filter-catalog">
-                        <!--<div class="h3-container"><h3>Фильтр:</h3></div>-->
+                        <h3>Фильтр:</h3>
                         <form action="https://echo.htmlacademy.ru" method="post">
                             <fieldset>
                                 <legend>Стоимость</legend>
@@ -150,99 +127,100 @@
                             <button type="submit" class="button">Показать</button>
                         </form>
                     </section>
-                </div>
-                <div class="list-pagination-container">
-                    <!--<section class="catalog-sorting">
-        				<h3>Сортировка:</h3>
-        				<ul class="sorting-list">
-        					<li><a href="#">По цене</a></li>
-        					<li><a href="#">По типу</a></li>
-        					<li><a href="#">По популярности</a></li>
-        				</ul>
-        				<ul>
-        					<li>
-        						<a href="#">
-        							<span class="visually-hidden">От большего к меньшему</span>
-        						</a>
-        					<li>
-        					<li>
-        						<a href="#">
-        							<span class="visually-hidden">От меньшего к большему</span>
-        						</a>
-        					</li>
-        				</ul>
-        			</section>-->
-                    <ul class="catalog-list">
-                        <li>
-                            <img src="img/item-1.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка любительская">
-                            <a href="#" class="catalog-item">Любительская селфи-палка</a>
-                            <p class="price">500 руб.</p>
-                            <div class="popup-catalog">
-                                <a href="#" class="button">В корзину</a>
-                                <a href="#" class="popup-catalog-item">Добавить к сравнению</a>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="img/item-2.jpg" class="image-catalog" width="360" height="380" alt="Cелфи-палка профессиональная">
-                            <a href="#" class="catalog-item">Профессиональная селфи-палка</a>
-                            <p class="price">1 500 руб.</p>
-                            <div class="popup-catalog">
-                                <a href="#" class="button">В корзину</a>
-                                <a href="#" class="popup-catalog-item">Добавить к сравнению</a>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="img/item-3.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка непотопляемая">
-                            <a href="#" class="catalog-item">Непотопляемая селфи-палка</a>
-                            <p class="price">2 500 руб.</p>
-                            <div class="popup-catalog">
-                                <a href="#" class="button">В корзину</a>
-                                <a href="#" class="popup-catalog-item">Добавить к сравнению</a>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="img/item-4.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                            <a href="#" class="catalog-item">Селфи-палка «Следуй за мной»</a>
-                            <p class="price">4 900 руб.</p>
-                            <div class="popup-catalog">
-                                <a href="#" class="button">В корзину</a>
-                                <a href="#" class="popup-catalog-item">Добавить к сравнению</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="pagination">
-        				<a href="#" class="back-next"><span>Назад</span></a>
-        				<ul class="pagination-list">
-        					<li>
-        						<a>1</a>
-        					</li>
-        					<li>
-        						<a href="#">2</a>
-        					</li>
-        					<li>
-        						<a href="#">3</a>
-        					</li>
-        				</ul>
-        				<a href="#" class="back-next"><span>Вперед</span></a>
-        			</div>
+                    <div class="list-pagination-container">
+                        <section class="catalog-sorting">
+            				<h3>Сортировка:</h3>
+            				<ul class="sorting-list">
+            					<li><a href="#">По цене</a></li>
+            					<li><a href="#">По типу</a></li>
+            					<li><a href="#">По популярности</a></li>
+            				</ul>
+            				<ul>
+            					<li>
+            						<a href="#">
+            							<span class="visually-hidden">От большего к меньшему</span>
+            						</a>
+            					<li>
+            					<li>
+            						<a href="#">
+            							<span class="visually-hidden">От меньшего к большему</span>
+            						</a>
+            					</li>
+            				</ul>
+            			</section>
+                        <ul class="catalog-list">
+                            <li>
+                                <img src="img/item-1.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка любительская">
+                                <a href="#" class="catalog-item">Любительская селфи-палка</a>
+                                <p class="price">500 руб.</p>
+                                <div class="popup-catalog">
+                                    <a href="#" class="button">В корзину</a>
+                                    <a href="#" class="popup-catalog-item">Добавить к сравнению</a>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="img/item-2.jpg" class="image-catalog" width="360" height="380" alt="Cелфи-палка профессиональная">
+                                <a href="#" class="catalog-item">Профессиональная селфи-палка</a>
+                                <p class="price">1 500 руб.</p>
+                                <div class="popup-catalog">
+                                    <a href="#" class="button">В корзину</a>
+                                    <a href="#" class="popup-catalog-item">Добавить к сравнению</a>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="img/item-3.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка непотопляемая">
+                                <a href="#" class="catalog-item">Непотопляемая селфи-палка</a>
+                                <p class="price">2 500 руб.</p>
+                                <div class="popup-catalog">
+                                    <a href="#" class="button">В корзину</a>
+                                    <a href="#" class="popup-catalog-item">Добавить к сравнению</a>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="img/item-4.jpg" class="image-catalog" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+                                <a href="#" class="catalog-item">Селфи-палка «Следуй за мной»</a>
+                                <p class="price">4 900 руб.</p>
+                                <div class="popup-catalog">
+                                    <a href="#" class="button">В корзину</a>
+                                    <a href="#" class="popup-catalog-item">Добавить к сравнению</a>
+                                </div>
+                            </li>
+                        </ul>
+                        <div class="pagination">
+            				<a href="#" class="back-next"><span>Назад</span></a>
+            				<ul class="pagination-list">
+            					<li>
+            						<a>1</a>
+            					</li>
+            					<li>
+            						<a href="#">2</a>
+            					</li>
+            					<li>
+            						<a href="#">3</a>
+            					</li>
+            				</ul>
+            				<a href="#" class="back-next"><span>Вперед</span></a>
+            			</div>
+                    </div>
                 </div>
             </div>
         </main>
         <div class="footer-container">
-            <footer class="footer footer-catalog container">
+            <footer class="footer container">
                 <div class="footer-top">
                     <a href="index.html" class="logo footer-logo">
                         <img src="img/logo-device-footer.svg" width="163" height="35" alt="DEVICE">
                     </a>
                     <div class="authorization-footer-container">
                         <div class="authorization authorization-footer">
-                            <a href="#">Войти</a>
+                            <a href="#" class="user-name">Валентин Петухов</a>
+                            <a href="#" class="user-authorization">Выйти</a>
                         </div>
                         <div>
-                            <a href="#">Сравнить</a>
+                            <a href="#" class="compare-footer">Сравнить</a>
                         </div>
                         <div>
-                            <a href="#">Корзина</a>
+                            <a href="#" class="basket-footer">Корзина</a>
                         </div>
                     </div>
                 </div>
@@ -263,17 +241,17 @@
                 </div>
                 <div class="social">
                     <ul class="social-list">
-                        <li>
+                        <li class="social-facebook">
                             <a href="#">
                                 <span class="visually-hidden">facebook</span>
                             </a>
                         </li>
-                        <li>
+                        <li class="social-instagram">
                             <a href="#">
                                 <span class="visually-hidden">instagram</span>
                             </a>
                         </li>
-                        <li>
+                        <li class="social-twitter">
                             <a href="#">
                                 <span class="visually-hidden">vk</span>
                             </a>
