--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <form action="https://echo.htmlacademy.ru" method="post">
                         <input type="search" name="search" placeholder="Поиск по сайту">
                         <a href="#" class="search-button">Найти</a>
+                        <span class="line"></span>
                     </form>
                 </div>
                 <div class="authorization-container">
