--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                     <form action="https://echo.htmlacademy.ru" method="post">
                         <input type="search" name="search" placeholder="Поиск по сайту">
                         <a href="#" class="search-button">Найти</a>
-                        <span class="line"></span>
                     </form>
                 </div>
                 <div class="authorization-container">
@@ -61,7 +60,7 @@
             <div class="slider container">
                 <ul class="slides-button-list">
                     <li>
-                        <a href="http://www.slamdunk.ru/" class="slide-button slide-one">
+                        <a href="#" class="slide-button slide-one">
                             <span class="visually-hidden">Первый слайд</span>
                         </a>
                     </li>
@@ -102,7 +101,7 @@
                             </div>
                         </div>
     				</li>
-    				<li class="slider-item slider-smartWatch">
+    				<li class="slider-item slider-smart-Watch">
                         <div class="offers">
                             <img src="img/slider-2.png" alt="Фитнес-браслет" width="345" height="485">
                             <div class="slider-container">
@@ -172,7 +171,7 @@
                             <p>Фитнеc-браслеты</p>
                         </a>
     				</li>
-    				<li class="index-cotalog-item cotalog-smartWatch">
+    				<li class="index-cotalog-item cotalog-smart-Watch">
     					<a href="#">
                             <div class="icon-container"></div>
                             <p>Умные часы</p>
