--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>HTML Academy: Девайс</title>
         <link href="css/normalize.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/min-style.css" rel="stylesheet">
     </head>
     <body>
         <header class="main-header container">
@@ -247,7 +247,8 @@
             <div class="info container">
                 <section>
                     <h3>О нас</h3>
-                    <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+                    <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
+                    </p>
                     <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
                     <ul class="delevery">
                         <li>Деловые Линии</li>
@@ -342,13 +343,12 @@
             </form>
         </div>
         <div class="popup popup-map">
-            <iframe src="https://yandex.ru/map-widget/v1/-/CCGvZBkl" width="960" height="559" frameborder="1" allowfullscreen="true"></iframe>
+            <iframe src="https://yandex.ru/map-widget/v1/-/CCGvZBkl" width="960" height="559"></iframe>
             <img src="img/map-big.jpg" alt="г. Москва, ул. Строителей, 15" width="960" height="559">
             <button type="button" class="button-close">
                 <span class="visually-hidden">Закрыть</span>
             </button>
         </div>
-        <script src="http://localhost:35729/livereload.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/min-script.js"></script>
   </body>
   </html>
