--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Моноподы</title>
         <link href="css/normalize.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/min-style.css" rel="stylesheet">
     </head>
     <body>
         <header class="main-header catalog-header container">
@@ -294,6 +294,6 @@
                 </div>
             </footer>
         </div>
-        <script src="http://localhost:35729/livereload.js"></script>
+        <script src="js/min-script.js"></script>
     </body>
 </html>
